DI-3. Create configuration